# slow-control_hub

./: .gitignore  DV_BASIC.md  DV_PERF.md  DV_PLAN.md  README.md  RTL_PLAN.md  TLM_PLAN.md  dp_ram.vhd  sc_hub.svd  sc_hub.vhd  sc_hub_avmm_handler.vhd  sc_hub_axi4_core.vhd  sc_hub_axi4_handler.vhd  sc_hub_axi4_ooo_handler.vhd  sc_hub_build-26p0p0331_hw.tcl  sc_hub_cmsis_svd.tcl  sc_hub_core.vhd  sc_hub_hw.tcl  sc_hub_pkg.vhd  sc_hub_pkt_rx.vhd  sc_hub_pkt_tx.vhd  sc_hub_top.vhd  sc_hub_top_axi4.vhd  sc_hub_v2_hw.tcl  sc_hub_wrapper.vhd
tlm/: CMakeLists.txt  README.md
tlm/include/: __init__.py  sc_hub_tlm_config.py  sc_hub_tlm_types.py  sc_hub_tlm_workload.py
tlm/results/ord_review_v3/: executed_ord_review.ipynb  ord_review.ipynb
tlm/scripts/: generate_field_notebook.py  generate_ord_notebook.py  plot_results.py  run_all.sh  run_atom_checks.py  run_category.sh  run_experiment.py  run_field_workload.py  run_ooo_checks.py  run_ord_checks.py  run_ordering_scan.py
tlm/src/: __init__.py  bus_target_model.py  perf_collector.py  sc_hub_admit_ctrl.py  sc_hub_atomic.py  sc_hub_buffer.py  sc_hub_credit_mgr.py  sc_hub_csr.py  sc_hub_dispatch.py  sc_hub_hdr_fifo.py  sc_hub_malloc.py  sc_hub_model.py  sc_hub_ord_tracker.py  sc_hub_pkt_rx_model.py  sc_hub_pkt_tx_model.py  sc_hub_pld_ram.py  sc_hub_tlm_top.py  sc_pkt_source.py
tlm/tests/: __init__.py  experiment_catalog.py
tlm/tests/atom/: atom_01_no_atomic.py  atom_05_correctness.py  atom_06_int_priority.py  atom_c01_atomicity.py  checks.py
tlm/tests/cred/: cred_01_deep_pld.py
tlm/tests/frag/: frag_01_uniform.py
(+197 files in other folders)
